--- a/style.css
+++ b/style.css
@@ -100,3 +100,37 @@ footer {
 .gh-link:hover {
   text-decoration: underline;
 }
+
+@media screen and (max-width: 400px) {
+  body {
+    display: block;
+    margin: 0 auto;
+  }
+
+  img {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    margin-left: 47px;
+  }
+
+  .spice1 {
+    margin-bottom: 10px;
+  }
+
+  p {
+    width: 300px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 10px;
+    font-size: 20px;
+    line-height: normal;
+  }
+
+  footer {
+    width: 300px;
+    display: block;
+    margin: 0 auto;
+  }
+}
